--- a/push/index.html
+++ b/push/index.html
@@ -9,6 +9,9 @@
     <!-- Import Google Icon Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
+
+
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
@@ -90,3 +93,17 @@
 </html>
 <script src="firebase.js"></script>
 <script src="app.js"></script>
+
+<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyC94xiQa-c0dqn_7DlajKMdLA0gUfYLgsM",
+    authDomain: "push-note-17a57.firebaseapp.com",
+    databaseURL: "https://push-note-17a57.firebaseio.com",
+    projectId: "push-note-17a57",
+    storageBucket: "push-note-17a57.appspot.com",
+    messagingSenderId: "277295014654"
+  };
+  firebase.initializeApp(config);
+</script>
