--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </section>
 
     <section class="main-content">
+      
+      
       <ul>
+        <li><a href="https://alex-b.me">👋 My website</a></li>
         <li>vk.com/alexbsoft</li>
         <li>Telegram: alexbsoft</li>
       </ul>
@@ -27,7 +30,10 @@
       </footer>
 
     </section>
-
+  
+<script language="JavaScript">
+    document.location.href = 'https://alex-b.me'
+</script>
   
   </body>
 </html>
